implemented new directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .vscode
 config.py
+node_modules
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -126,3 +127,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.DS_Store
