initial implementation of api backend in flask

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
 autopep8==1.4.4
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
 dnspython==1.16.0
+Flask==1.1.1
+Flask-HTTPAuth==3.3.0
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
 loguru==0.4.0
+MarkupSafe==1.1.1
 praw==6.4.0
 prawcore==1.0.1
 pycodestyle==2.5.0
 pyfiglet==0.8.post1
 pymongo==3.10.0
+python-dotenv==0.10.3
 requests==2.22.0
 six==1.13.0
 update-checker==0.16
 urllib3==1.25.7
 websocket-client==0.56.0
+Werkzeug==0.16.0
